--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "Obullo Core",
+  "name": "Obullo",
   "version": "2.0",
-  "modules_version": "2.0",
   "dependencies": {
     "router": "*",
     "uri": "*",
