obm file updates

--- a/obullo_modules/auth/package.json
+++ b/obullo_modules/auth/package.json
@@ -3,7 +3,7 @@
   "description": "User Authentication Class",
   "version": "0.0.2",
   "author": {
-    "name": "Ersin Guvenc",
+    "name": "Ersin Güvenç",
     "email": "eguvenc@gmail.com",
     "url": "https://github.com/eguvenc"
   },
