--- a/obullo_modules/task/package.json
+++ b/obullo_modules/task/package.json
@@ -3,7 +3,7 @@
   "description": "Task Helper, monitor all framework logs and debugs from your console, run cli tasks.",
   "version": "0.0.1",
   "author": {
-    "name": "Ersin Guvenc",
+    "name": "Ersin Güvenç",
     "email": "eguvenc@gmail.com",
     "url": "https://github.com/eguvenc"
   },
