--- a/obullo_modules/auth/package.json
+++ b/obullo_modules/auth/package.json
@@ -13,7 +13,7 @@
         "copy" : { 
             "source" : "obullo_modules/$name/releases/$version/src/auth.php", 
             "target" : "app/config/",
-            "##### we don\'t need to file type if the target path name equal to app/config" :" we move the file to app/config folder and update $config var."
+            "#####comment" :"We don\'t need to file type if the target path name equal to app/config we move the file to app/config folder and update $config var."
         }
     }
   ],
