--- a/ob_modules/auth/package.json
+++ b/ob_modules/auth/package.json
@@ -13,7 +13,7 @@
         "copy" : { 
             "source" : "obullo_modules/$name/releases/$version/src/auth.php", 
             "target" : "app/config/",
-            "#####comment" :"We don\'t need to file type if the target path name equal to app/config we move the file to app/config folder and update $config var."
+            "#####comment" :"We don't need to file type if the target path name equal to app/config we move the file to app/config folder and update $config var."
         }
     }
   ],
@@ -26,9 +26,11 @@
     "authentication"
   ],
   "homepage": "https://github.com/eguvenc/auth",
-  "repository": {
+  "repo": {
     "type": "git",
-    "url": "git://github.com/eguvenc/auth.git"
+    "url": "git://github.com/eguvenc/auth.git",
+    "archive" : "zip",
+    "archive_url": "https://github.com/obullo/auth/archive/master.zip"
   },
   "main": "./releases/latest/auth.php",
   "requires": {
