--- a/ob_modules/task/package.json
+++ b/ob_modules/task/package.json
@@ -30,11 +30,11 @@
     "follow debugs"
   ],
   "homepage": "https://github.com/obullo/task",
-  "repository": {
+  "repo": {
     "type": "git",
     "url": "https://github.com/obullo/task.git",
     "archive" : "zip",
-    "archive-url": "https://github.com/obullo/task/archive/master.zip"
+    "archive_url": "https://github.com/obullo/task/archive/master.zip"
   },
   "main": "./releases/latest/task.php",
   "requires": {
