--- a/ob_modules/auth/package.json
+++ b/ob_modules/auth/package.json
@@ -1,50 +1,39 @@
 {
   "name": "auth",
   "description": "User Authentication Class",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "author": {
     "name": "Ersin Güvenç",
     "email": "eguvenc@gmail.com",
     "url": "https://github.com/eguvenc"
   },
   "component" : "library",
-  "shell" : [
-    {
-        "copy" : { 
-            "source" : "obullo_modules/$name/releases/$version/src/auth.php", 
-            "target" : "app/config/",
-            "#####comment" :"We don't need to file type if the target path name equal to app/config we move the file to app/config folder and update $config var."
-        }
-    }
-  ],
   "dependencies": {
-    "database": "1.7.4",
-    "session": "0.2.0"
+    "session": "*"
   },
   "keywords": [
     "auth",
     "authentication"
   ],
-  "homepage": "https://github.com/eguvenc/auth",
+  "homepage": "https://github.com/obullo/auth",
   "repo": {
     "type": "git",
-    "url": "git://github.com/eguvenc/auth.git",
+    "url": "git://github.com/obullo/auth.git",
     "archive" : "zip",
     "archive_url": "https://github.com/obullo/auth/archive/master.zip"
   },
-  "main": "./releases/latest/auth.php",
   "requires": {
-    "php": ">= 5.2.4",
+    "php": ">= 5.1.2",
     "extensions": ["none"]
   },
   "bugs": {
-    "url": "https://github.com/eguvenc/auth/issues",
+    "url": "https://github.com/obullo/auth/issues",
     "email": "eguvenc@gmail.com"
   },
   "licenses": [
     {
       "type": "GPL",
-      "url": "https://github.com/eguvenc/auth/master/README.md"
+      "url": "http://www.gnu.org/licenses/gpl-3.0.html"
     }
   ]
 }
