--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ob/agent"]
 	path = ob/agent
 	url = git@github.com:obullo/agent.git
+[submodule "ob/acl"]
+	path = ob/acl
+	url = git@github.com:obullo/acl.git
