updated mongodb package

--- a/ob/mongo_db/package.json
+++ b/ob/mongo_db/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongo_db",
-  "description": "Mongo db crud class. Control the mongodb create,read,update and delete operations.",
+  "description": "Mongo db crud class. Control the mongodb crud (create,read,update and delete) operations.",
   "version": "0.0.1",
   "author": {
     "name": "Ersin Güvenç",
