--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ob/agent"]
 	path = ob/agent
 	url = git://github.com/obullo/agent.git
+[submodule "ob/auth"]
+	path = ob/auth
+	url = https://github.com/obullo/auth.git
