--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ob/agent"]
 	path = ob/agent
 	url = git://github.com/obullo/agent.git
+[submodule "ob/config"]
+	path = ob/config
+	url = git://github.com/obullo/config.git
