--- a/example.htaccess.conf
+++ b/example.htaccess.conf
@@ -5,28 +5,31 @@ php_value memory_limit 32M
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    #this is to remove the index.php in url
+    # disable directory indexing
+    Options -Indexes
 
-    #Removes access to the Obullo folder by users.
-    #previously this would not have been possible.
-    #'obullo' can be replaced if you have renamed your obullo folder.
-    RewriteCond %{REQUEST_URI} ^(?:app|obullo)\b.*
+    # this is to remove the index.php in url
+
+    # Removes access to the Obullo folder by users.
+    # previously this would not have been possible.
+    # 'ob' can be replaced if you have renamed your obullo folder.
+    RewriteCond %{REQUEST_URI} ^(app|ob|modules)\b.*
     RewriteRule ^(.*)$ index.php/$1 [L]
 
-    #Checks to see if the user is attempting to access a valid file,
-    #such as an image or css document, if this isn't true it sends the
-    #request to index.php
+    # Checks to see if the user is attempting to access a valid file,
+    # such as an image or css document, if this isn't true it sends the
+    # request to index.php
+
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} !=/favicon.ico
-    RewriteRule (.*)/assets/(.*) modules/$1/assets/$2 [L]
 
-    #This last condition enables access to the images and css folders, and the robots.txt file
-    RewriteCond $1 !^(index\.php|obullo|modules|app|assets)
-    RewriteRule ^(.*)$ index.php/$1 [L]
+    # This last condition enables access to the images and css folders, and the robots.txt file
+    RewriteCond $1 !^(index\.php|assets|robots\.txt)
+    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
     AddType text/x-component .htc
  
-    #block access to multiple file types at once, use the code below:-
+    # block access to multiple file types at once, use the code below:-
     <FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak)$">
         Order Allow,Deny
         Deny from all
