added component functionality

--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "Obullo",
-  "version": "*",
-  "db_layer": "Database_Pdo",
   "dependencies": {
+    "obullo": "",
     "task" : "*",
     "auth" : "*"
   }
