--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,6 @@
 [submodule "packages/cart"]
 	path = packages/cart
 	url = git://github.com/obullo/cart.git
-[submodule "ob/cookie"]
-	path = ob/cookie
+[submodule "packages/cookie"]
+	path = packages/cookie
 	url = git://github.com/obullo/cookie.git
