--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "packages/date"]
 	path = packages/date
 	url = git://github.com/obullo/date.git
+[submodule "packages/controller"]
+	path = packages/controller
+	url = git://github.com/obullo/controller.git
