--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "packages/controller"]
 	path = packages/controller
 	url = git://github.com/obullo/controller.git
+[submodule "packages/db"]
+	path = packages/db
+	url = git://github.com/obullo/db.git
