--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "packages/db"]
 	path = packages/db
 	url = git://github.com/obullo/db.git
+[submodule "packages/email"]
+	path = packages/email
+	url = git://github.com/obullo/email.git
