--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "packages/error"]
 	path = packages/error
 	url = git://github.com/obullo/error.git
+[submodule "packages/exceptions"]
+	path = packages/exceptions
+	url = git://github.com/obullo/exceptions.git
