--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "packages/form"]
 	path = packages/form
 	url = git://github.com/obullo/form.git
+[submodule "packages/ftp"]
+	path = packages/ftp
+	url = git://github.com/obullo/ftp.git
