--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "packages/hmvc"]
 	path = packages/hmvc
 	url = git://github.com/obullo/hmvc.git
+[submodule "packages/auth"]
+	path = packages/auth
+	url = git://github.com/obullo/auth.git
