--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "packages/html"]
 	path = packages/html
 	url = git://github.com/obullo/html.git
+[submodule "packages/email"]
+	path = packages/email
+	url = git://github.com/obullo/email.git
