--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "packages/email"]
 	path = packages/email
 	url = git://github.com/obullo/email.git
+[submodule "packages/i"]
+	path = packages/i
+	url = git://github.com/obullo/i.git
