--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "packages/locale"]
 	path = packages/locale
 	url = git://github.com/obullo/locale.git
+[submodule "packages/log"]
+	path = packages/log
+	url = git://github.com/obullo/log.git
