--- a/mtemp/log_write/package.json
+++ b/mtemp/log_write/package.json
@@ -1,6 +1,6 @@
 {
   "name": "log_write",
-  "description": "Write application logs, a component of the log helper.",
+  "description": "Log write package (Writing component for the log helper).",
   "version": "0.0.1",
   "author": {
     "name": "Ersin Güvenç",
@@ -21,7 +21,7 @@
     "archive_url": "https://github.com/obullo/log_write/archive/master.zip"
   },
   "requires": {
-    "php": ">= 5.1.2",
+    "php": ">= 5.3.0",
     "extensions": ["none"]
   },
   "bugs": {
