added new submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "packages/database_pdo"]
 	path = packages/database_pdo
 	url = git://github.com/obullo/database_pdo.git
+[submodule "packages/encrypt"]
+	path = packages/encrypt
+	url = git://github.com/obullo/encrypt.git
