--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "packages/model"]
 	path = packages/model
 	url = git://github.com/obullo/model.git
+[submodule "packages/output"]
+	path = packages/output
+	url = git://github.com/obullo/output.git
