--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "packages/security"]
 	path = packages/security
 	url = git://github.com/obullo/security.git
+[submodule "packages/vi"]
+	path = packages/vi
+	url = git://github.com/obullo/vi.git
