added new submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "packages/vi"]
 	path = packages/vi
 	url = git://github.com/obullo/vi.git
+[submodule "packages/view"]
+	path = packages/view
+	url = git://github.com/obullo/view.git
