--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "packages/validator"]
 	path = packages/validator
 	url = git://github.com/obullo/validator.git
+[submodule "packages/pdo_mysql"]
+	path = packages/pdo_mysql
+	url = git://github.com/obullo/pdo_mysql.git
