--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "packages/pdo_mysql"]
 	path = packages/pdo_mysql
 	url = git://github.com/obullo/pdo_mysql.git
+[submodule "packages/uri"]
+	path = packages/uri
+	url = git://github.com/obullo/uri.git
