--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "packages/uri"]
 	path = packages/uri
 	url = git://github.com/obullo/uri.git
+[submodule "packages/url"]
+	path = packages/url
+	url = git://github.com/obullo/url.git
