--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "packages/url"]
 	path = packages/url
 	url = git://github.com/obullo/url.git
+[submodule "packages/acl"]
+	path = packages/acl
+	url = git://github.com/obullo/acl.git
