--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "packages/odm"]
 	path = packages/odm
 	url = git://github.com/obullo/odm.git
+[submodule "packages/sess"]
+	path = packages/sess
+	url = git://github.com/obullo/sess.git
