--- a/mtemp/xml/package.json
+++ b/mtemp/xml/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "session",
-  "description": "Session management helper",
+  "name": "xml",
+  "description": "Xml Helper.",
   "version": "0.0.1",
   "author": {
     "name": "Ersin Güvenç",
@@ -9,23 +9,26 @@
   },
   "component" : "helper",
   "keywords": [
-    "session",
-    "sessions",
-    "http session"
+    "xml",
+    "helper",
+    "convert",
+    "xml writer",
+    "writer",
+    "cdata"
   ],
-  "homepage": "https://github.com/obullo/session",
+  "homepage": "https://github.com/obullo/xml",
   "repo": {
     "type": "git",
-    "url": "https://github.com/obullo/session.git",
+    "url": "https://github.com/obullo/xml.git",
     "archive" : "zip",
-    "archive_url": "https://github.com/obullo/session/archive/master.zip"
+    "archive_url": "https://github.com/obullo/xml/archive/master.zip"
   },
   "requires": {
-    "php": ">= 5.1.2",
+    "php": ">= 5.3.0",
     "extensions": ["none"]
   },
   "bugs": {
-    "url": "https://github.com/obullo/session/issues",
+    "url": "https://github.com/obullo/xml/issues",
     "email": "eguvenc@gmail.com"
   },
   "licenses": [
