--- a/mtemp/xss/package.json
+++ b/mtemp/xss/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "string",
-  "description": "String manipulation helper",
+  "name": "text",
+  "description": "Text Helper.",
   "version": "0.0.1",
   "author": {
     "name": "Ersin Güvenç",
@@ -9,22 +9,29 @@
   },
   "component" : "helper",
   "keywords": [
+    "text",
     "string",
-    "strings"
+    "word",
+    "character limiter",
+    "word limiter",
+    "word wrap",
+    "word censor",
+    "highlight",
+    "ascii"
   ],
-  "homepage": "https://github.com/obullo/string",
+  "homepage": "https://github.com/obullo/text",
   "repo": {
     "type": "git",
-    "url": "https://github.com/obullo/string.git",
+    "url": "https://github.com/obullo/text.git",
     "archive" : "zip",
-    "archive_url": "https://github.com/obullo/string/archive/master.zip"
+    "archive_url": "https://github.com/obullo/text/archive/master.zip"
   },
   "requires": {
-    "php": ">= 5.1.2",
+    "php": ">= 5.3.0",
     "extensions": ["none"]
   },
   "bugs": {
-    "url": "https://github.com/obullo/string/issues",
+    "url": "https://github.com/obullo/text/issues",
     "email": "eguvenc@gmail.com"
   },
   "licenses": [
