--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "packages/string"]
 	path = packages/string
 	url = git://github.com/obullo/string.git
+[submodule "packages/mongo_db"]
+	path = packages/mongo_db
+	url = git://github.com/obullo/mongo_db.git
