--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "packages/mongo_db"]
 	path = packages/mongo_db
 	url = git://github.com/obullo/mongo_db.git
+[submodule "packages/navbar"]
+	path = packages/navbar
+	url = git://github.com/obullo/navbar.git
