--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "packages/pdo_firebird"]
 	path = packages/pdo_firebird
 	url = git://github.com/obullo/pdo_firebird.git
+[submodule "packages/pdo_ibm"]
+	path = packages/pdo_ibm
+	url = git://github.com/obullo/pdo_ibm.git
