--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,6 @@
 [submodule "packages/pdo_mssql"]
 	path = packages/pdo_mssql
 	url = git://github.com/obullo/pdo_mssql.git
+[submodule "packages/pdo_oci"]
+	path = packages/pdo_oci
+	url = git://github.com/obullo/pdo_oci.git
