--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "packages/pdo_oci"]
 	path = packages/pdo_oci
 	url = git://github.com/obullo/pdo_oci.git
+[submodule "packages/pdo_odbc"]
+	path = packages/pdo_odbc
+	url = git://github.com/obullo/pdo_odbc.git
