--- a/.gitmodules
+++ b/.gitmodules
@@ -163,3 +163,6 @@
 [submodule "packages/pdo_pgsql"]
 	path = packages/pdo_pgsql
 	url = git://github.com/obullo/pdo_pgsql.git
+[submodule "packages/pdo_sqlite"]
+	path = packages/pdo_sqlite
+	url = git://github.com/obullo/pdo_sqlite.git
