--- a/.gitmodules
+++ b/.gitmodules
@@ -178,3 +178,6 @@
 [submodule "packages/utf8"]
 	path = packages/utf8
 	url = git://github.com/obullo/utf8.git
+[submodule "packages/xml"]
+	path = packages/xml
+	url = git://github.com/obullo/xml.git
