--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "packages/html"]
 	path = packages/html
 	url = git://github.com/obullo/html.git
+[submodule "packages/validator"]
+	path = packages/validator
+	url = git://github.com/obullo/validator.git
