--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
     "dependencies": {
         "config" : "*",
         "bench" : "*",
+        "database_pdo": "*",
         "error" : "*",
-        "exception" : "*",
+        "exceptions" : "*",
         "form" : "*",
         "form_json" : "*",
         "i" : "*",
         "input" : "*",
         "locale" : "*",
         "log" : "*",
+        "log_write" : "*",
         "router" : "*",
         "security": "*",
         "sess": "*",
@@ -18,7 +20,6 @@
         "output" : "*",
         "uri" : "*",
         "url" : "*",
-        "vi" : "*",
         "view" : "*",
         "validator" : "*"
   },
@@ -26,7 +27,7 @@
         "core": "Obullo",
         "config": "Config",
         "db": "Database_Pdo",
-        "exception": "Exceptions",
+        "exceptions": "Exceptions",
         "input": "Input",
         "locale": "Locale",
         "log": "Log_Write",
