--- a/example.htaccess.conf
+++ b/example.htaccess.conf
@@ -10,10 +10,10 @@ php_value memory_limit 32M
 
     # this is to remove the index.php in url
 
-    # Removes access to the Obullo folder by users.
+    # Removes access to the System folders by users.
     # previously this would not have been possible.
-    # 'ob' can be replaced if you have renamed your obullo folder.
-    RewriteCond %{REQUEST_URI} ^(app|ob|modules)\b.*
+    # 'packages' can be replaced if you have renamed your packages folder.
+    RewriteCond %{REQUEST_URI} ^(app|packages|modules)\b.*
     RewriteRule ^(.*)$ index.php/$1 [L]
 
     # Checks to see if the user is attempting to access a valid file,
