--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "bugs": {
     "url": "https://github.com/obullo/task/issues",
-    "email": "eguvenc@gmail.com"
+    "email": "obulloframework@gmail.com"
   },
   "licenses": [
     {
