--- a/.gitmodules
+++ b/.gitmodules
@@ -184,3 +184,6 @@
 [submodule "packages/validator"]
 	path = packages/validator
 	url = git://github.com/obullo/validator.git
+[submodule "packages/hooks"]
+	path = packages/hooks
+	url = git://github.com/obullo/hooks.git
